Added training statistics hook and visualizer

--- a/ModelTest.ipynb
+++ b/ModelTest.ipynb
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Be sure to change the _checkpoint\\_name_ variable to the name of your chosen model's checkpoint name.  "
+    "Be sure to change the _checkpoint\\_name_ variable to the name of your model's chosen checkpoint name.  "
    ]
   },
   {
@@ -264,7 +264,7 @@
     "                category_index,\n",
     "                use_normalized_coordinates=True,\n",
     "                max_boxes_to_draw=5,\n",
-    "                min_score_thresh=.2,\n",
+    "                min_score_thresh=.7,\n",
     "                agnostic_mode=False)\n",
     "\n",
     "    # The output is displayed on an interactive window\n",
