Add CreateHSVProfile.py, mod ModelTest.ipynb

--- a/ModelTest.ipynb
+++ b/ModelTest.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,11 +87,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint_name = 'ckpt-1'\n",
+    "checkpoint_name = 'ckpt-37'\n",
     "\n",
     "# Load the pipeline.config file and build a detection model\n",
     "configs = config_util.get_configs_from_pipeline_file(CONFIG_PATH)\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,29 +189,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[None, None]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Configuration file found\n"
+     ]
     }
    ],
    "source": [
     "# Setup output window\n",
     "plt.ion()\n",
-    "gui = plt.figure(\"Real-time Sign Detection\", facecolor='#1e1e1e', edgecolor='#1e1e1e')\n",
+    "gui = plt.figure(\"Real-time Gesture Detection\", facecolor='#1e1e1e', edgecolor='#1e1e1e')\n",
     "gui.canvas.mpl_connect(\"close_event\", lambda event: handle_close(event, cap))\n",
     "gui.canvas.mpl_connect('key_press_event', on_press)\n",
     "result = None\n",
     "title_obj = plt.title('Real-time Sign Detection')\n",
-    "plt.setp(title_obj, color='#d4d4d4')         #set the color of title to white"
+    "plt.setp(title_obj, color='#d4d4d4')         #set the color of title to white\n",
+    "\n",
+    "# Check if a configuration file exists, else load a predefined value set\n",
+    "if os.path.isfile('Config\\config.dat'):\n",
+    "    print(\"Configuration file found\")\n",
+    "    file = open(\"Config\\config.dat\", \"r\")\n",
+    "    contents = file.read()\n",
+    "    config = ast.literal_eval(contents)\n",
+    "    file.close()\n",
+    "else:\n",
+    "    print (\"Configuration file not found. Run CreateHSVProfile.py to create a local profile\")\n",
+    "    config = {'HL': 0, 'SL': 29, 'VL': 24, 'HH': 40, 'SH': 255, 'VH': 255}"
    ]
   },
   {
@@ -223,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -240,9 +248,18 @@
     "    ret, frame = cap.read()\n",
     "    image_np = np.array(frame)\n",
     "\n",
+    "    HSV_Frame = cv2.cvtColor(frame, cv2.COLOR_BGR2HSV)\n",
+    "    totalMask = cv2.inRange(HSV_Frame, (config[\"HL\"], config[\"SL\"], config[\"VL\"]), (config[\"HH\"], config[\"SH\"], config[\"VH\"]))\n",
+    "    totalMask = totalMask.astype(np.uint8)\n",
+    "\n",
+    "    # The mask finally undergoes the Opening operator in order to remove pepper noise,\n",
+    "    # then gets applied as a bitwise operator to the frame\n",
+    "    totalMask = cv2.morphologyEx(totalMask, cv2.MORPH_OPEN, cv2.getStructuringElement(cv2.MORPH_ELLIPSE,(7, 7)))\n",
+    "    output = cv2.bitwise_and(frame, frame, mask = totalMask)\n",
+    "\n",
     "    # The masked image is then converted to a tensor for object detection\n",
     "    # The detections dictionary is formatted according to the objectdetectionAPI\n",
-    "    input_tensor = tf.convert_to_tensor(np.expand_dims(image_np, 0), dtype=tf.float32)\n",
+    "    input_tensor = tf.convert_to_tensor(np.expand_dims(output, 0), dtype=tf.float32)\n",
     "    detections = detect_fn(input_tensor)\n",
     "    num_detections = int(detections.pop('num_detections'))\n",
     "    detections = {key: value[0, :num_detections].numpy()\n",
@@ -264,7 +281,7 @@
     "                category_index,\n",
     "                use_normalized_coordinates=True,\n",
     "                max_boxes_to_draw=5,\n",
-    "                min_score_thresh=.7,\n",
+    "                min_score_thresh=.4,\n",
     "                agnostic_mode=False)\n",
     "\n",
     "    # The output is displayed on an interactive window\n",
@@ -272,7 +289,7 @@
     "    if result is None:\n",
     "        plt.axis(\"off\")\n",
     "        result = plt.imshow(image_np)\n",
-    "        plt.title(\"Real-time Sign Detection\")\n",
+    "        plt.title(\"Real-time Gesture Detection\")\n",
     "        plt.show() \n",
     "    else:\n",
     "        result.set_data(image_np)\n",
