--- a/DatasetGeneration.ipynb
+++ b/DatasetGeneration.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "id": "7f1df295",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "1f3315bb",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "id": "a5c6191b",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "8e9d5328",
    "metadata": {},
    "outputs": [],
@@ -450,7 +450,6 @@
     "            #print(f\"Moving {file_name} and {annotation_name} from {imagePath} to {IMAGE_PATH + '/test'}\")\n",
     "            shutil.copy(src=imagePath + \"/\" + file_name, dst=IMAGE_PATH + '/test')\n",
     "            shutil.copy(src=imagePath + \"/\" + annotation_name, dst=IMAGE_PATH + '/test')\n",
-    "            #shutil.move(os.path.join(source_dir, file_name), imagePath)\n",
     "        else:\n",
     "            # Remove comment for verbose output\n",
     "            #print(f\"Moving {file_name} and {annotation_name} from {imagePath} to {IMAGE_PATH + '/train'}\")\n",
@@ -582,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "id": "d212f928",
    "metadata": {},
    "outputs": [],
@@ -595,10 +594,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "id": "a52505aa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'MODEL_PATH' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5112/3861936546.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mCONFIG_PATH\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mMODEL_PATH\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'/'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mCUSTOM_MODEL_NAME\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'/pipeline.config'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mconfig\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconfig_util\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_configs_from_pipeline_file\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mCONFIG_PATH\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'MODEL_PATH' is not defined"
+     ]
+    }
+   ],
    "source": [
     "CONFIG_PATH = MODEL_PATH + '/' + CUSTOM_MODEL_NAME + '/pipeline.config'\n",
     "config = config_util.get_configs_from_pipeline_file(CONFIG_PATH)"
@@ -627,26 +638,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "8d172d68",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "random_crop_image {\n",
-      "  min_object_covered: 0.0\n",
-      "  min_aspect_ratio: 0.75\n",
-      "  max_aspect_ratio: 3.0\n",
-      "  min_area: 0.75\n",
-      "  max_area: 1.0\n",
-      "  overlap_thresh: 0.0\n",
-      "}\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pipeline_config.model.ssd.num_classes = 12\n",
     "pipeline_config.train_config.batch_size = 16 # The RTX 2060 can handle both 16 and 32 batch sizes\n",
@@ -734,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 1,
    "id": "92a3c8fe",
    "metadata": {},
    "outputs": [],
@@ -757,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 3,
    "id": "21d59c54",
    "metadata": {},
    "outputs": [
@@ -801,42 +796,46 @@
    "id": "d81fd6c4",
    "metadata": {},
    "source": [
-    "The architecture of the SSD is as follows.  "
+    "As an additional information, we are going to print the top-down summary of the model's architecture as follows.  \n",
+    "We first build the model through the _model\\_builder_ script, then restore the checkpoint 0 provided together with the pre-trained model (can also be done with the model trained by us, only the weights will differ).  \n",
+    "We then call the _feature\\_extractor_ wrapper for Keras's API and build the model, in order to be able to call the _summary()_ function.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "id": "16599560",
+   "execution_count": 28,
+   "id": "2a090ade",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:SavedModel saved prior to TF 2.5 detected when loading Keras model. Please ensure that you are saving the model with model.save() or tf.keras.models.save_model(), *NOT* tf.saved_model.save(). To confirm, there should be a file named \"keras_metadata.pb\" in the SavedModel directory.\n"
+      "Model: \"ssd_mobile_net_v2fpn_keras_feature_extractor_6\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "bottom_up_Conv2d_20_depthwis multiple                  0 (unused)\n",
+      "_________________________________________________________________\n",
+      "bottom_up_Conv2d_20_batchnor multiple                  0 (unused)\n",
+      "_________________________________________________________________\n",
+      "bottom_up_Conv2d_20 (Lambda) multiple                  0 (unused)\n",
+      "_________________________________________________________________\n",
+      "bottom_up_Conv2d_21_depthwis multiple                  0 (unused)\n",
+      "_________________________________________________________________\n",
+      "bottom_up_Conv2d_21_batchnor multiple                  0 (unused)\n",
+      "_________________________________________________________________\n",
+      "bottom_up_Conv2d_21 (Lambda) multiple                  0 (unused)\n",
+      "_________________________________________________________________\n",
+      "model_2 (Functional)         [(None, None, None, 24),  2257984   \n",
+      "_________________________________________________________________\n",
+      "FeatureMaps (KerasFpnTopDown multiple                  0 (unused)\n",
+      "=================================================================\n",
+      "Total params: 2,257,984\n",
+      "Trainable params: 2,223,872\n",
+      "Non-trainable params: 34,112\n",
+      "_________________________________________________________________\n"
      ]
-    }
-   ],
-   "source": [
-    "new_model = tf.keras.models.load_model(PRETRAINED_MODEL_PATH + \"/ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "id": "2a090ade",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.training.tracking.util.CheckpointLoadStatus at 0x1a1d857bbe0>"
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -850,8 +849,23 @@
     "\n",
     "# Restore the specified checkpoint (it must match an existing model)\n",
     "ckpt = tf.compat.v2.train.Checkpoint(model=detection_model)\n",
-    "ckpt.restore(os.path.join(PRETRAINED_MODEL_PATH + \"/ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint\", checkpoint_name)).expect_partial()\n"
+    "ckpt.restore(os.path.join(PRETRAINED_MODEL_PATH + \"/ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint\", checkpoint_name)).expect_partial()\n",
+    "\n",
+    "# Build the model in order to be able to call summary()\n",
+    "inputs = tf.keras.Input(shape=(None, 320, 320, 3))\n",
+    "detection_model.feature_extractor.build(inputs)\n",
+    "detection_model.built\n",
+    "\n",
+    "detection_model.feature_extractor.summary()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee7d09c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
