--- a/ModelTest.ipynb
+++ b/ModelTest.ipynb
@@ -207,7 +207,7 @@
     "gui.canvas.mpl_connect(\"close_event\", lambda event: handle_close(event, cap))\n",
     "gui.canvas.mpl_connect('key_press_event', on_press)\n",
     "result = None\n",
-    "title_obj = plt.title('Real-time Sign Detection')\n",
+    "title_obj = plt.title('Real-time Gesture Detection')\n",
     "plt.setp(title_obj, color='#d4d4d4')         #set the color of title to white\n",
     "\n",
     "# Check if a configuration file exists, else load a predefined value set\n",
