--- a/DatasetGeneration.ipynb
+++ b/DatasetGeneration.ipynb
@@ -712,7 +712,9 @@
    "metadata": {},
    "source": [
     "The _model_lib_v2.py_ script has been modified in order to redirect the training history printed on stdout also onto a file.    \n",
-    "We will now process this _training.log_ file, found in the root directory, in order to extract statistics from the training.  "
+    "We will now process this _training.log_ file, found in the root directory, in order to extract statistics from the training.  \n",
+    "\n",
+    "Such statistics can also be seen through tensorboard, by going into the _Tensorflow\\Workspace\\trained-models\\custom_trained_model\\train_ folder and running _tensorboard --logdir=._"
    ]
   },
   {
