--- a/Technical Paper/main.tex
+++ b/Technical Paper/main.tex
@@ -128,7 +128,7 @@ This input interface could see applications as an instrument for learning (molec
 \begin{flushleft}
 The first step amounts to the generation of the custom dataset, justified by the fact that no current dataset exists containing all of the gestures we wanted to use.
 In order to do so, we followed the steps which are also described in the Python Notebooks \href{https://github.com/MarzioVallero/ML-Based-Blender-Gestural-Input-Interface/blob/master/DatasetGeneration.ipynb}{DatasetGeneration.ipynb}.\linebreak
-The step is responsible for the definition of the set of gestures and for automated sample capture. After defining the number of images we want to collect for each object class, we proceed to actually capture the frames, which are automatically saved in separate directories according to their label of reference. It is recommended to produce for each label the same amount of frames and to insert a single gesture per frame.\linebreak
+This step is responsible for the definition of the set of gestures and for automated sample capture. After defining the number of images we want to collect for each object class, we proceed to actually capture the frames, which are automatically saved in separate directories according to their label of reference. It is recommended to produce for each label the same amount of samples and to insert a single gesture per frame.\linebreak
 The amount of data at the network's disposal for training greatly impacts its ability to learn: for this very reason, we exploited data augmentation to increase the number of available samples for the network whilst trying to reduce the implicit bias due to having a single person produce the whole dataset. The data augmentation transformations used are horizontal/vertical stretching and zooming. Other data augmentation techniques could have caused shape overlaps between gestures and have thus been avoided. Negative samples have been introduced to reduce the amount of false positives registered by the network.\linebreak
 Totally, we defined 12 classes, plus an extra unlabeled one for negative samples. For each class, we produced 100 samples.\linebreak
 The main variance between sets of images for the same label were different spatial positions of the hand with respect to the frame and rotations of the wrist.\linebreak
@@ -149,11 +149,11 @@ The final dataset thus contains $1300$ images representing the same person, on t
 \begin{flushleft}
 The first approach we though of for creating an input interface for Blender was to build and train a RNN able to recognize actions from a video input. This however proved to be extremely inadequate in terms of usability, since repeating an action multiple times was the only way to produce incremental transformations through the interface. Moreover, the task of generating and labeling a custom dataset for such approach would have had a big impact on the time available for the project's development. For this reason this approach was ultimately discarded.\linebreak
 The second approach, which was later adopted, was to train an Object Detection network able to map continuous static input gestures to transformations in the 3D scene of Blender. The choice of using the SSD MobileNet V2 FPNlite network arised from its inherent state of the art characteristics: a very fast mean input processing time of 22 ms, which suits perfectly the need to process video at 30 FPS from a webcam, which generates an image every 33.3 ms and its very high mAP score of 22.2 onto the COCO 17 dataset on which it was initially trained.\linebreak
-This approach moreover let us apply transfer learning to retrain a pre-existing model, improving considerably the training times required.
+This approach moreover let us apply transfer learning to retrain a pre-existing model, improving considerably the required training times.
 The chosen model was originally developed by Google Brain researchers in \hyperref[Ref1]{[4]} and aimed at improving over current hand-crafted CNNs, learning a better architecture of feature pyramid network for object detection, called NAS-FPN. The main changes applied to such network were the removal of the \textit{random\_horizontal\_flip} data augmentation layer and the reduction of total training steps, justified by the fact that the dataset we used is much smaller with respect to COCO 17 and thus boasts less features to be learnt.\linebreak
 
 The model's architecture is explained in detail in the developer's paper \hyperref[RefArchSSD]{[2]}.
-The basic building block introduced by this paper is a bottleneck depth-separable convolution layer with residuals, whose structure is shown in \hyperref[figure2]{Figure 2}.
+The basic building block introduced in their paper is a bottleneck depth-separable convolution layer with residuals, whose structure is shown in \hyperref[figure2]{Figure 2}.
 
 \begin{figure}[!h]
     \centering
@@ -165,7 +165,7 @@ The general architecture of the model contains an initial fully convolutional la
 
 \begin{figure}[!h]
     \centering
-    \includegraphics[width=0.5\textwidth]{ML Project/resources/image/MoblieNetV2Table2.png} \caption{The full model's architecture. Each line represents n repetition of the same layer. All layers feature the same number of channels c. The first layer of each sequence has stride s, whilst the others have stride 1.}
+    \includegraphics[width=0.5\textwidth]{ML Project/resources/image/MoblieNetV2Table2.png} \caption{The full model's architecture. Each line represents n repetitions of the same layer. All layers feature the same number of channels c. The first sequence layer has stride s, whilst the others have stride 1.}
 \end{figure}
 \label{figure3}
 
@@ -192,8 +192,8 @@ To boost the model's prediction accuracy, we tried to apply HSV skin tone thresh
 \section{Experiments}
 \begin{flushleft}
 All the models have been trained onto a machine equipped with an \textit{Intel i5-11600K} CPU and accelerated through an \textit{NVidia GeForce RTX 2060 6GB} GPU.
-The first training has been done over $20000$ steps, with a batch size of $8$, totaling $82$ epochs, and required over two hours to complete: this produced a model with a final Total Loss of $0.12568491$, still too high to provide useful predictions. Testing this checkpoint in fact proved to be unfeasible, as it was not able to recognize almost anything at all during the evaluation phase.
-The training has then been resumed for another $20000$ steps, requiring another two hours and a half. The final Total Loss came out to be $0.09876089$, which is a great improvement over previous iterations. However, testing the model live immediately gave rise to bounding box detection issues and general inaccuracy of the predictions, without much generalization capabilities. Moreover, since the network during training internally performs horizontal flips for data augmentation, the left and right hand gestures get often swapped or overlapped. To boost the accuracy of the network, we threshold its input using an HSV profile, customizable to better suit each user.
+The first training has been done over $20000$ steps, with a batch size of $8$, totaling $82$ epochs, and required over two hours to complete: this produced a model with a final Total Loss of $0.12568491$, still too high to provide stable predictions. Testing this checkpoint in fact proved to be unfeasible, as it was not able to recognize almost anything at all during the evaluation phase.
+The training has then been resumed for another $20000$ steps, requiring another two hours and a half. The final Total Loss came out to be $0.09876089$, which is a great improvement over previous iterations. However, testing the model live immediately gave rise to bounding box detection issues and general inaccuracy of the predictions, without much generalization capabilities. Moreover, since the network during training internally performed horizontal flips for data augmentation, the left and right hand gestures got often swapped or overlapped. To boost the accuracy of the network, we threshold its input using an HSV profile, customizable to better suit each user.
 To solve the hand swapping issue, we retrained the model once again and removed the horizontal flipping data augmentation layer, with a batch size of $16$, totaling $328$ epochs. This last training required only four hours and a half to complete, suggesting that we weren't fully exploiting the GPU before.
 The training statistics for this last model are shown in \hyperref[figure5]{Figure 5}.
 \begin{figure}[!h]
@@ -201,7 +201,7 @@ The training statistics for this last model are shown in \hyperref[figure5]{Figu
     \includegraphics[width=0.5\textwidth]{ML Project/resources/image/statistics.PNG} \caption{All losses and learning rate statistics for the 40000 steps model trained without the horizontal flip data augmentation layer.}
 \end{figure}
 \label{figure5}
-The role of the HSV thresholding preprocessing step plays an impactful role on the model's ability to process the input frames. Despite the fact that the dataset contains images with hands in different spatial positions not over a simple background, the model sometimes produces random false positives, detecting a gesture where there is none. This may be due to the fact that the whole dataset contains the same static background, or that some of the features learnt by the network are edge bound and some objects happen to fit partially those feature requirements. However, after thresholding most of the background contains no data, as shown in \hyperref[figure6]{Figure 6}, and thus gives to the model less room for error in evaluating gestures, often resulting in confidence rates of around 95\%-99\%.
+The role of the HSV thresholding preprocessing step plays an impactful role on the model's ability to process the input frames. Despite the fact that the dataset contains images with hands in different spatial positions over a complex background, the model sometimes produces random false positives, detecting a gesture where there is none. This may be due to the fact that the whole dataset contains the same static background, or that some of the features learnt by the network are edge bound and some objects happen to fit partially those feature requirements. However, after thresholding, most of the background contains no data, as shown in \hyperref[figure6]{Figure 6}, and thus gives to the model less room for error in evaluating gestures, often resulting in confidence measures of around 95\%-99\%.
 
 \begin{figure}[!h]
     \centering
@@ -214,10 +214,10 @@ The role of the HSV thresholding preprocessing step plays an impactful role on t
 \section{Conclusions}
 \begin{flushleft}
 The process of producing and understanding the model presented in this paper has been multi-faceted and long, however it also proved to be a very formative experience.\linebreak
-The generation of the dataset has been a quite daunting task, requiring some days of work just for capturing and labeling. Moreover, the expansion of the dataset to include also negative samples to feed to the network resulted into a better generalization of the gesture features, reducing by a significant margin the false positives due to predicting gestures where there are none. In fact, one of the most common pitfalls in these kinds of applications is the false prediction of a hand gesture on the user's face, which in our case has been mitigated quite well.\linebreak
+The generation of the dataset has been a quite daunting task, requiring multiple days of work just for capturing and labeling. Moreover, the expansion of the dataset to include also negative samples to feed to the network resulted into a better generalization of the gesture features, reducing by a significant margin the false positives due to predicting gestures where there are none. In fact, one of the most common pitfalls in these kinds of applications is the false prediction of a hand gesture on the user's face, which in our case has been mitigated quite well.\linebreak
 Setting up the \textit{pipeline.config} file proved to be a challenging task too, due to the required installation of the Tensorflow Object Detection API, which brought in many versioning issues deriving from Tensorflow 1 and 2 incompatible calls among the \textit{Tensorflow/models} submodule's scripts. In the end, parts of those scripts had to be modified by us in order to account for updates in Tensorflow's API.\linebreak
 The analysis of the \textit{pipeline.config} file also gave us insight about the inner workings of the model, letting us tinker around hardware specific definitions to improve training performance (like the batch size, which we found out to boast better performance at value 16) and removing components which were working against our needs.\linebreak
-The model's generalization capabilities over the single-person dataset proved to be extremely promising when evaluated onto different people. The model expects a certain shape and orientation, thus incorrect gestures due to individual's interpretation of a gesture still get unrecognized, though gestures which try to resemble more the original dataset end up being recognized with no issue and a high confidence of around 90\%. This requires a bit of effort from the user's side to work, however we believe it to be a quite encouraging result given the amount of data at our disposal. This aspect could very well be improved by generating a bigger dataset with higher user variance, especially in terms of hand morphology and skin tone, and consequently training for a higher number of steps.\linebreak
+The model's generalization capabilities over the single-person dataset proved to be extremely promising when evaluated onto different people. The model expects a certain shape and orientation, thus incorrect gestures due to different individual's interpretation still get unrecognized, though gestures which try to resemble more the original dataset end up being recognized with no issue and a high confidence of around 90\%. This requires a bit of effort from the user's side to work, however we believe it to be a quite encouraging result given the amount of data at our disposal. This aspect could be improved by generating a bigger dataset with higher user variance, especially in terms of hand morphology and skin tone, and consequently training for a higher number of steps.\linebreak
 The thresholding external preprocessing step, originally implemented following \hyperref[Ref0]{[3]} as a \textit{YCbCr} thresholding, proved to boast low masking capabilities with respect to skin tone. It has later been changed to the current \textit{HSV} thresholding script, as allows for more precise masking for \textit{in-the-wild} environments.\linebreak
 In conclusion, we believe the results of this paper to be significant, in that they provide insight over the techniques and approaches to be used to produce gestural input interfaces through the exploitation of Object Detector Neural Networks.\linebreak
 
